working on the css alignment issue

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -99,12 +99,12 @@ div.resume_center_image_1{
 
 
 div.home_center_image{
-  
+    margin-right: auto;
+    margin-left: auto;
     padding-bottom: 40px;
-    padding-left: 235px;
+   
     img {
-        margin-right: auto;
-        margin-left: auto;
+
         border-radius: 20px;
     }
      }
